# NORD

./: README.md
backend/: .env.example  README.md  pyproject.toml  uvicorn.ini
backend/app/: __init__.py  config.py  deps.py  main.py  metrics.py  ollama_client.py  rate_limiter.py  schemas.py
backend/tests/: test_health.py
frontend/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: ChatWindow.tsx  Composer.tsx  MarkdownRender.tsx  MessageBubble.tsx  SettingsSheet.tsx  StatsBar.tsx  TopBar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  scroll-area.tsx  select.tsx  sheet.tsx  slider.tsx  tabs.tsx  textarea.tsx  toggle.tsx  tooltip.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts  types.ts  ws.ts
