[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "jetson-chat-backend"
version = "0.1.0"
description = "FastAPI chat gateway for local Ollama on Jetson Orin"
authors = [{name = "GPT-5 Codex"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<0.112",
  "uvicorn[standard]>=0.27,<0.29",
  "httpx>=0.27,<0.28",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "python-dotenv>=1.0,<2.0",
  "orjson>=3.9,<4.0",
  "uvloop>=0.19,<0.20; sys_platform != 'win32'",
  "anyio>=4.3,<5.0",
  "pytest>=8.1,<9.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
